# InvestKit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.trellis/spec/backend/: index.md  investkit-runtime-contract.md  investment-core-contract.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-11-audit-investkit-project-state/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/07-11-establish-batch-001-launch-governance/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/07-11-initialize-investkit-skill-research/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/07-11-install-financial-skills/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/07-13-clarify-investkit-agent-harness-product/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/07-14-first-investkit-runtime-vertical-slice/: check.jsonl  implement.jsonl  info.md  prd.md  task.json
.trellis/tasks/07-15-investment-core-pack/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/your-name/: journal-1.md
adapted/skills/gf_etf_rank/: SKILL.md
adapted/skills/gf_etf_search/: SKILL.md
adapted/skills/gf_etf_super_fund/: SKILL.md
adapted/skills/gf_fund_detail/: SKILL.md
adapted/skills/gf_fund_invest/: SKILL.md
adapted/skills/gf_lhb_list/: SKILL.md
adapted/skills/gf_stock_f10/: SKILL.md
adapted/skills/gf_stock_valuation/: SKILL.md
agents/: README.md
docs/governance/: minimum-governance.md
docs/integrations/: skill-and-provider-registry.md
docs/product/: PRD-v0.1.md  architecture.md  distribution.md  harness-value-proposition.md  investment-capability-map.md  roadmap.md
docs/security/: security-policy.md
docs/skill-research/: SOP.md  acceptance-criteria.md  report-template.md  taxonomy.md
fixtures/acceptance/: microsoft-fy2025.json
fixtures/demo/: aurora-lantern-works.json
plans/: product-development-roadmap.md  skill-research-phase-1.md
registry/governance/: batch-001-acquisition-records.csv  batch-001-candidate-governance.csv
registry/inbox/: sources.csv
registry/schema/: acquisition-record.schema.json  skill-record.schema.json
reports/batches/: batch-001-capability-matrix.csv  batch-001-duplicates.md  batch-001-readiness.md  batch-001-recommendations.md  batch-001-summary.md
reports/capabilities/: bear-case-analysis-synthesis.md  business-model-analysis-synthesis.md  catalyst-analysis-synthesis.md  company-deep-research-synthesis.md  comps-analysis-synthesis.md  earnings-analysis-synthesis.md  earnings-quality-analysis-synthesis.md  financial-statement-analysis-synthesis.md  investment-report-synthesis.md  investment-thesis-synthesis.md  source-verification-synthesis.md  valuation-analysis-synthesis.md
reports/market/a-share-innovation-2026-07-17/: build-metadata.json
reports/project/: ciccwm-wrapper-review.md  context-gap-analysis.md  current-state-audit.md  eastmoney-wrapper-review.md  guangfa-wrapper-review.md  repository-inventory.md
schemas/: research-bundle-v1.schema.json  research-bundle-v1.template.json  runtime-asset-catalog-v1.json
scripts/: README.md  build_a_share_innovation_report.py  quick_validate.py
scripts/templates/: a_share_innovation_report.html.j2
skills/: README.md
skills/bear-case-analysis/: SKILL.md
skills/bear-case-analysis/agents/: openai.yaml
skills/bear-case-analysis/references/: method-contract.md  trigger-evals.json
skills/business-model-analysis/: SKILL.md
skills/business-model-analysis/agents/: openai.yaml
skills/business-model-analysis/references/: method-contract.md  trigger-evals.json
skills/catalyst-analysis/: SKILL.md
skills/catalyst-analysis/agents/: openai.yaml
skills/catalyst-analysis/references/: method-contract.md  trigger-evals.json
skills/company-deep-research/: SKILL.md
skills/company-deep-research/agents/: openai.yaml
skills/company-deep-research/references/: method-contract.md  trigger-evals.json
skills/comps-analysis/: SKILL.md
skills/comps-analysis/agents/: openai.yaml
skills/comps-analysis/references/: method-contract.md  trigger-evals.json
skills/earnings-analysis/: SKILL.md
skills/earnings-analysis/agents/: openai.yaml
skills/earnings-quality-analysis/: SKILL.md
skills/financial-statement-analysis/: SKILL.md
skills/investment-report/: SKILL.md
skills/investment-thesis/: SKILL.md
skills/security-identification/: SKILL.md
skills/source-verification/: SKILL.md
skills/valuation-analysis/: SKILL.md
specs/: evidence-policy.md  financial-data-policy.md  report-policy.md  research-principles.md  risk-policy.md  source-policy.md  valuation-policy.md
src/investkit/: __init__.py  __main__.py  assets.py  catalog.py  cli.py  doctor.py  environment.py  errors.py  filesystem.py  initializer.py  models.py  planning.py  security.py
tasks/: current-batch.md
templates/: batch-summary.md  provider-environment.example  skill-analysis.md  source-record.yaml
tests/: __init__.py  test_asset_contracts.py  test_bundle_assets.py  test_ciccwm_adapter.py  test_cli_init_doctor.py  test_dynamic_planner.py  test_eastmoney_adapter.py  test_fused_symbol_cli.py  test_guangfa_adapter.py  test_imported_analysis.py  test_imported_doctor.py  test_investment_core.py  test_packaging.py  test_project_environment.py  test_provider_fusion.py  test_real_company_research.py  test_real_issuer_acceptance.py  test_research_runtime.py  test_runtime_asset_catalog.py  test_sse_provider.py  test_v03_migration.py
workflows/: company-deep-dive.json
workspace-template/: README.md
(+60 files in other folders)
