[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "investkit"
version = "0.3.0"
description = "Offline-first investment research Agent Harness"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/fezeryang/InvestKit"
Repository = "https://github.com/fezeryang/InvestKit.git"
Issues = "https://github.com/fezeryang/InvestKit/issues"
Changelog = "https://github.com/fezeryang/InvestKit/blob/main/CHANGELOG.md"

[project.scripts]
investkit = "investkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# Repository-root assets remain the authoritative first-party source.  Wheels
# carry a delivery copy below the platform data prefix so installed CLI commands
# can run without a source checkout.
[tool.setuptools.data-files]
"share/investkit/agents" = ["agents/README.md"]
"share/investkit/fixtures/demo" = ["fixtures/demo/aurora-lantern-works.json"]
"share/investkit/packages" = ["packages/README.md"]
"share/investkit/schemas" = ["schemas/research-bundle-v1.schema.json", "schemas/research-bundle-v1.template.json", "schemas/runtime-asset-catalog-v1.json"]
"share/investkit/skills/security-identification" = ["skills/security-identification/SKILL.md"]
"share/investkit/skills/security-identification/agents" = ["skills/security-identification/agents/*"]
"share/investkit/skills/security-identification/references" = ["skills/security-identification/references/*"]
"share/investkit/skills/company-deep-research" = ["skills/company-deep-research/SKILL.md"]
"share/investkit/skills/company-deep-research/agents" = ["skills/company-deep-research/agents/*"]
"share/investkit/skills/company-deep-research/references" = ["skills/company-deep-research/references/*"]
"share/investkit/skills/business-model-analysis" = ["skills/business-model-analysis/SKILL.md"]
"share/investkit/skills/business-model-analysis/agents" = ["skills/business-model-analysis/agents/*"]
"share/investkit/skills/business-model-analysis/references" = ["skills/business-model-analysis/references/*"]
"share/investkit/skills/financial-statement-analysis" = ["skills/financial-statement-analysis/SKILL.md"]
"share/investkit/skills/financial-statement-analysis/agents" = ["skills/financial-statement-analysis/agents/*"]
"share/investkit/skills/financial-statement-analysis/references" = ["skills/financial-statement-analysis/references/*"]
"share/investkit/skills/earnings-quality-analysis" = ["skills/earnings-quality-analysis/SKILL.md"]
"share/investkit/skills/earnings-quality-analysis/agents" = ["skills/earnings-quality-analysis/agents/*"]
"share/investkit/skills/earnings-quality-analysis/references" = ["skills/earnings-quality-analysis/references/*"]
"share/investkit/skills/valuation-analysis" = ["skills/valuation-analysis/SKILL.md"]
"share/investkit/skills/valuation-analysis/agents" = ["skills/valuation-analysis/agents/*"]
"share/investkit/skills/valuation-analysis/references" = ["skills/valuation-analysis/references/*"]
"share/investkit/skills/comps-analysis" = ["skills/comps-analysis/SKILL.md"]
"share/investkit/skills/comps-analysis/agents" = ["skills/comps-analysis/agents/*"]
"share/investkit/skills/comps-analysis/references" = ["skills/comps-analysis/references/*"]
"share/investkit/skills/earnings-analysis" = ["skills/earnings-analysis/SKILL.md"]
"share/investkit/skills/earnings-analysis/agents" = ["skills/earnings-analysis/agents/*"]
"share/investkit/skills/earnings-analysis/references" = ["skills/earnings-analysis/references/*"]
"share/investkit/skills/investment-thesis" = ["skills/investment-thesis/SKILL.md"]
"share/investkit/skills/investment-thesis/agents" = ["skills/investment-thesis/agents/*"]
"share/investkit/skills/investment-thesis/references" = ["skills/investment-thesis/references/*"]
"share/investkit/skills/bear-case-analysis" = ["skills/bear-case-analysis/SKILL.md"]
"share/investkit/skills/bear-case-analysis/agents" = ["skills/bear-case-analysis/agents/*"]
"share/investkit/skills/bear-case-analysis/references" = ["skills/bear-case-analysis/references/*"]
"share/investkit/skills/catalyst-analysis" = ["skills/catalyst-analysis/SKILL.md"]
"share/investkit/skills/catalyst-analysis/agents" = ["skills/catalyst-analysis/agents/*"]
"share/investkit/skills/catalyst-analysis/references" = ["skills/catalyst-analysis/references/*"]
"share/investkit/skills/source-verification" = ["skills/source-verification/SKILL.md"]
"share/investkit/skills/source-verification/agents" = ["skills/source-verification/agents/*"]
"share/investkit/skills/source-verification/references" = ["skills/source-verification/references/*"]
"share/investkit/skills/investment-report" = ["skills/investment-report/SKILL.md"]
"share/investkit/skills/investment-report/agents" = ["skills/investment-report/agents/*"]
"share/investkit/skills/investment-report/references" = ["skills/investment-report/references/*"]
"share/investkit/specs" = ["specs/*.md"]
"share/investkit/workflows" = ["workflows/company-deep-dive.json"]
"share/investkit/workspace-template" = ["workspace-template/README.md"]
